fixed grid formatting on mobile

--- a/modifiers.css
+++ b/modifiers.css
@@ -239,8 +239,8 @@ ul li {
         padding: 0 8px;
     }
     #child {
-        flex-grow: 1;
-        max-width: 0;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        max-width: none;
     }
     #child ul {
         flex-grow: 1;
